# orapack

./: LICENSE  README.md  pyproject.toml  ttt.py
.github/workflows/: ci.yml
.pushpin/: pre-commit
examples/: test.decl.sql
orapack/: builder.py  component.py  components.py  finder.py  main.py  oracle_python_types.py  schemas.py
tests/: conftest.py  test_buider.py  test_finder.py  test_finders.py
